--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ header{
                 margin: 0 5px;
                 font-size: 16px;
                 border: none;
+                 background-color: #eee;
                 padding-left: 10px;
                 cursor: pointer;
                 
