--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ header{
                 margin: 0 5px;
                 font-size: 16px;
                 border: none;
-                 background-color: #eee;
+                background-color: #eee;
                 padding-left: 10px;
                 cursor: pointer;
                 
@@ -235,6 +235,7 @@ header{
 .buy-sell-section{
     display: flex;
     margin-left: 5%;
+    margin-right: 5%;
     align-items: center;
     justify-content: space-evenly;
     height: 600px;
@@ -264,19 +265,19 @@ header{
                 height: auto;
             }
             .p1{
-                padding-left: 30px;
+                padding-left: 20px;
             }
             .p2{
-                padding-left: 50px;
+                padding-left: 30px;
             }
             .p3{
-                padding-left: 50px;
+                padding-left: 40px;
             }
             .p4{
-                padding-left: 65px;
+                padding-left: 45px;
             }
             .p5{
-                padding-left: 80px;
+                padding-left: 60px;
             }
         }
         & button{
@@ -493,12 +494,14 @@ header{
             margin-left: 20%;
            margin-top: 0px;
            justify-content: space-evenly;
+           
     
             & img{
                margin-left: 25px;
                margin-top: 30px;
                width: 40px;
                height: 40px;
+               
                
             }
             & img:nth-child(1){
@@ -647,6 +650,7 @@ header{
             margin-bottom: 0;
             margin-top: 13%;
             margin-left: 10px;
+            cursor: pointer;
         }
         .product{
             width: 25%;
